--- a/vitrage_devstack/local.conf
+++ b/vitrage_devstack/local.conf
@@ -5,45 +5,56 @@ RABBIT_PASSWORD=password
 SERVICE_PASSWORD=password
 SERVICE_TOKEN=tokentoken
 HOST_IP=127.0.0.1
-#OFFLINE=True
+OFFLINE=True
 
-#~~~~~~~~ Vitrage ~~~~~~~~#
+#~~~~~~~~~~~~~~~~~~~ Services ~~~~~~~~~~~~~~~~~~~~~~#
+
+# Vitrage Services #
 enable_plugin vitrage https://git.openstack.org/openstack/vitrage
 enable_plugin vitrage-dashboard https://git.openstack.org/openstack/vitrage-dashboard
 enable_service vitrage-api,vitrage-graph
-[[post-config|$VITRAGE_CONF]]
-[datasources]
-types = nova.host,nova.instance,nova.zone,static_physical,cinder.volume,neutron.network,neutron.port,heat.stack
 
-#~~~~~~~~ Ceilometer ~~~~~~~~#
+# Ceilometer Services #
 enable_plugin ceilometer https://git.openstack.org/openstack/ceilometer
 enable_plugin aodh https://git.openstack.org/openstack/aodh
 enable_service key,aodi-api,aodh-notifier,aodh-evaluator
 enable_service ceilometer-acompute ceilometer-acentral ceilometer-anotification ceilometer-collector ceilometer-api
 disable_service ceilometer-alarm-evaluator,ceilometer-alarm-notifier
 
-#~~~~~~~~ Neutron ~~~~~~~~#
+# Neutron Services #
 disable_service n-net
 ENABLED_SERVICES+=,q-svc,q-dhcp,q-meta,q-agt,q-l3
+
+# Heat Services #
+enable_service h-eng h-api h-api-cfn h-api-cw
+
+
+#~~~~~~~~~~~~~~~~~~~ Config ~~~~~~~~~~~~~~~~~~~~~~#
+
+# Vitrage Conf #
+[[post-config|$VITRAGE_CONF]]
+[datasources]
+types = nova.host,nova.instance,nova.zone,static_physical,cinder.volume,neutron.network,neutron.port,heat.stack
+
+# Neutron Conf #
 [[post-config|$NEUTRON_CONF]]
 [DEFAULT]
 notification_topics = notifications,vitrage_notifications
 notification_driver=messagingv2
 
-#~~~~~~~~ Heat ~~~~~~~~#
-enable_service h-eng h-api h-api-cfn h-api-cw
+# Heat Conf #
 [[post-config|$HEAT_CONF]]
 [DEFAULT]
 notification_topics = notifications,vitrage_notifications
 notification_driver=messagingv2
 
-#~~~~~~~~ Nova ~~~~~~~~#
+# Nova Conf #
 [[post-config|$NOVA_CONF]]
 [DEFAULT]
 notification_topics = notifications,vitrage_notifications
 notification_driver=messagingv2
 
-#~~~~~~~~ Cinder ~~~~~~~~#
+# Cinder Conf #
 [[post-config|$CINDER_CONF]]
 [DEFAULT]
 notification_topics = notifications,vitrage_notifications
