--- a/vitrage_devstack/local.conf
+++ b/vitrage_devstack/local.conf
@@ -6,6 +6,7 @@ SERVICE_PASSWORD=password
 SERVICE_TOKEN=tokentoken
 HOST_IP=127.0.0.1
 OFFLINE=True
+LOGFILE=/tmp/logs/stack.sh.log
 
 #~~~~~~~~~~~~~~~~~~~ Services ~~~~~~~~~~~~~~~~~~~~~~#
 
