--- a/vitrage_devstack/local.conf
+++ b/vitrage_devstack/local.conf
@@ -8,7 +8,6 @@ HOST_IP=127.0.0.1
 OFFLINE=True
 LOGFILE=/tmp/logs/stack.sh.log
 
-#~~~~~~~~~~~~~~~~~~~ Services ~~~~~~~~~~~~~~~~~~~~~~#
 
 # Vitrage Services #
 enable_plugin vitrage https://git.openstack.org/openstack/vitrage
@@ -30,7 +29,6 @@ ENABLED_SERVICES+=,q-svc,q-dhcp,q-meta,q-agt,q-l3
 enable_service h-eng h-api h-api-cfn h-api-cw
 
 
-#~~~~~~~~~~~~~~~~~~~ Config ~~~~~~~~~~~~~~~~~~~~~~#
 
 # Nova Conf #
 [[post-config|$NOVA_CONF]]
@@ -59,5 +57,4 @@ notification_driver=messagingv2
 # Vitrage Conf #
 [[post-config|$VITRAGE_CONF]]
 [datasources]
-types = nova.host,nova.instance,nova.zone,static_physical,cinder.volume,neutron.network,neutron.port,heat.stack
-
+types = nova.host,nova.instance,nova.zone,static_physical,cinder.volume,neutron.network,neutron.port
