--- a/vitrage_devstack/local.conf
+++ b/vitrage_devstack/local.conf
@@ -57,4 +57,10 @@ notification_driver=messagingv2
 # Vitrage Conf #
 [[post-config|$VITRAGE_CONF]]
 [datasources]
-types = nova.host,nova.instance,nova.zone,static_physical,cinder.volume,neutron.network,neutron.port
+types = nova.host,nova.instance,nova.zone,static_physical,cinder.volume,neutron.network,neutron.port,zabbix
+[zabbix]
+url = http://127.0.0.1/zabbix
+user=Admin
+password=zabbix
+config_file = /etc/vitrage/zabbix_conf.yaml
+
