--- a/vitrage_devstack/templates/stack_instance_problem.yaml
+++ b/vitrage_devstack/templates/stack_instance_problem.yaml
@@ -34,7 +34,7 @@ scenarios:
         action_target:
          target: stack
         properties:
-         alarm_name: Application Danger
+         alarm_name: App Danger
          severity: warning
      - action:
         action_type: set_state
