--- a/vitrage_devstack/local.conf
+++ b/vitrage_devstack/local.conf
@@ -56,6 +56,9 @@ notification_driver=messagingv2
 
 # Vitrage Conf #
 [[post-config|$VITRAGE_CONF]]
+[DEFAULT]
+debug=false
+verbose=true
 [datasources]
 types = nova.host,nova.instance,nova.zone,static_physical,cinder.volume,neutron.network,neutron.port,zabbix
 [zabbix]
@@ -63,4 +66,7 @@ url = http://127.0.0.1/zabbix
 user=Admin
 password=zabbix
 config_file = /etc/vitrage/zabbix_conf.yaml
+update_method=pull
+changes_interval=10
+
 
