--- a/vitrage_devstack/local.conf
+++ b/vitrage_devstack/local.conf
@@ -60,7 +60,7 @@ notification_driver=messagingv2
 debug=false
 verbose=true
 [datasources]
-types = nova.host,nova.instance,nova.zone,static_physical,cinder.volume,neutron.network,neutron.port,zabbix
+types = nova.host,nova.instance,nova.zone,static_physical,cinder.volume,neutron.network,neutron.port,zabbix,heat.stack
 [zabbix]
 url = http://127.0.0.1/zabbix
 user=Admin
