--- a/vitrage_devstack/local.conf
+++ b/vitrage_devstack/local.conf
@@ -10,6 +10,7 @@ LOGFILE=/tmp/logs/stack.sh.log
 
 
 # Vitrage Services #
+enable_plugin heat git://git.openstack.org/openstack/heat
 enable_plugin vitrage https://git.openstack.org/openstack/vitrage
 enable_plugin vitrage-dashboard https://git.openstack.org/openstack/vitrage-dashboard
 enable_service vitrage-api,vitrage-graph
