--- a/vitrage_devstack/local.conf
+++ b/vitrage_devstack/local.conf
@@ -5,7 +5,7 @@ RABBIT_PASSWORD=password
 SERVICE_PASSWORD=password
 SERVICE_TOKEN=tokentoken
 HOST_IP=127.0.0.1
-OFFLINE=True
+#OFFLINE=True
 LOGFILE=/tmp/logs/stack.sh.log
 
 
