--- a/vitrage_devstack/local.conf
+++ b/vitrage_devstack/local.conf
@@ -5,7 +5,7 @@ RABBIT_PASSWORD=password
 SERVICE_PASSWORD=password
 SERVICE_TOKEN=tokentoken
 HOST_IP=127.0.0.1
-#OFFLINE=True
+OFFLINE=True
 LOGFILE=/tmp/logs/stack.sh.log
 
 
@@ -18,7 +18,7 @@ enable_service vitrage-api,vitrage-graph
 # Ceilometer Services #
 enable_plugin ceilometer https://git.openstack.org/openstack/ceilometer
 enable_plugin aodh https://git.openstack.org/openstack/aodh
-enable_service key,aodh-api,aodh-notifier,aodh-evaluator
+enable_service key,aodi-api,aodh-notifier,aodh-evaluator
 enable_service ceilometer-acompute ceilometer-acentral ceilometer-anotification ceilometer-collector ceilometer-api
 disable_service ceilometer-alarm-evaluator,ceilometer-alarm-notifier
 
@@ -28,8 +28,6 @@ ENABLED_SERVICES+=,q-svc,q-dhcp,q-meta,q-agt,q-l3
 
 # Heat Services #
 enable_service h-eng h-api h-api-cfn h-api-cw
-
-
 
 # Nova Conf #
 [[post-config|$NOVA_CONF]]
@@ -61,7 +59,7 @@ notification_driver=messagingv2
 debug=false
 verbose=true
 [datasources]
-types = nova.host,nova.instance,nova.zone,static_physical,cinder.volume,neutron.network,neutron.port,zabbix,heat.stack
+types = nova.host,nova.instance,nova.zone,static_physical,cinder.volume,neutron.network,neutron.port,zabbix
 [zabbix]
 url = http://127.0.0.1/zabbix
 user=Admin
@@ -69,5 +67,5 @@ password=zabbix
 config_file = /etc/vitrage/zabbix_conf.yaml
 update_method=pull
 changes_interval=10
-
-
+[database]
+connection = mysql+pymysql://root:password@127.0.0.1/vitrage?charset=utf8
