--- a/vitrage_devstack/queens/local.conf
+++ b/vitrage_devstack/queens/local.conf
@@ -18,7 +18,7 @@ enable_service vitrage-api,vitrage-graph
 # Ceilometer Services #
 enable_plugin ceilometer https://git.openstack.org/openstack/ceilometer
 enable_plugin aodh https://git.openstack.org/openstack/aodh
-enable_service key,aodi-api,aodh-notifier,aodh-evaluator
+enable_service key,aodh-api,aodh-notifier,aodh-evaluator
 enable_service ceilometer-acompute ceilometer-acentral ceilometer-anotification ceilometer-collector ceilometer-api
 disable_service ceilometer-alarm-evaluator,ceilometer-alarm-notifier
 
