--- a/vitrage_devstack/queens/local.conf
+++ b/vitrage_devstack/queens/local.conf
@@ -9,11 +9,15 @@ SERVICE_TOKEN=tokentoken
 LOGFILE=/tmp/logs/stack.sh.log
 
 
-# Vitrage Services #
-enable_plugin heat git://git.openstack.org/openstack/heat
+# Vitrage #
 enable_plugin vitrage https://git.openstack.org/openstack/vitrage
 enable_plugin vitrage-dashboard https://git.openstack.org/openstack/vitrage-dashboard
-enable_service vitrage-api,vitrage-graph
+
+# Heat #
+enable_plugin heat git://git.openstack.org/openstack/heat
+
+# Mistral #
+enable_plugin mistral https://github.com/openstack/mistral
 
 # Ceilometer Services #
 enable_plugin ceilometer https://git.openstack.org/openstack/ceilometer
