--- a/vitrage_devstack/queens/local.conf
+++ b/vitrage_devstack/queens/local.conf
@@ -8,7 +8,6 @@ SERVICE_TOKEN=tokentoken
 #OFFLINE=True
 LOGFILE=/tmp/logs/stack.sh.log
 
-
 # Vitrage #
 enable_plugin vitrage https://git.openstack.org/openstack/vitrage
 enable_plugin vitrage-dashboard https://git.openstack.org/openstack/vitrage-dashboard
@@ -56,6 +55,12 @@ notification_driver=messagingv2
 [DEFAULT]
 notification_topics = notifications,vitrage_notifications
 notification_driver=messagingv2
+
+# Aodh Conf #
+[[post-config|$AODH_CONF]]
+[oslo_messaging_notifications]
+topics = notifications,vitrage_notifications
+driver = messagingv2
 
 # Vitrage Conf #
 [[post-config|$VITRAGE_CONF]]
