--- a/vitrage_devstack/queens/local.conf
+++ b/vitrage_devstack/queens/local.conf
@@ -21,9 +21,7 @@ enable_plugin mistral https://github.com/openstack/mistral
 # Ceilometer Services #
 enable_plugin ceilometer https://git.openstack.org/openstack/ceilometer
 enable_plugin aodh https://git.openstack.org/openstack/aodh
-enable_service key,aodh-api,aodh-notifier,aodh-evaluator
-enable_service ceilometer-acompute ceilometer-acentral ceilometer-anotification ceilometer-collector ceilometer-api
-disable_service ceilometer-alarm-evaluator,ceilometer-alarm-notifier
+CEILOMETER_BACKEND=gnocchi
 
 # Neutron Services #
 disable_service n-net
