--- a/vitrage_devstack/queens/local.conf
+++ b/vitrage_devstack/queens/local.conf
@@ -66,7 +66,7 @@ driver = messagingv2
 debug=false
 verbose=true
 [datasources]
-types = nova.host,nova.instance,nova.zone,static_physical,cinder.volume,neutron.network,neutron.port,zabbix,heat.stack,doctor
+types = nova.host,nova.instance,nova.zone,aodh,static,cinder.volume,neutron.network,neutron.port,zabbix,heat.stack,doctor
 [zabbix]
 url = http://127.0.0.1/zabbix
 user=Admin
