--- a/vitrage_devstack/queens/local.conf
+++ b/vitrage_devstack/queens/local.conf
@@ -7,10 +7,12 @@ SERVICE_TOKEN=tokentoken
 #HOST_IP=127.0.0.1
 #OFFLINE=True
 LOGFILE=/tmp/logs/stack.sh.log
+#USE_PYTHON3=True
 
 # Vitrage #
 enable_plugin vitrage https://git.openstack.org/openstack/vitrage
 enable_plugin vitrage-dashboard https://git.openstack.org/openstack/vitrage-dashboard
+enable_plugin vitrage-tempest-plugin git://git.openstack.org/openstack/vitrage-tempest-plugin
 
 # Heat #
 enable_plugin heat git://git.openstack.org/openstack/heat
@@ -21,14 +23,6 @@ enable_plugin mistral https://github.com/openstack/mistral
 # Ceilometer Services #
 enable_plugin ceilometer https://git.openstack.org/openstack/ceilometer
 enable_plugin aodh https://git.openstack.org/openstack/aodh
-CEILOMETER_BACKEND=gnocchi
-
-# Neutron Services #
-disable_service n-net
-ENABLED_SERVICES+=,q-svc,q-dhcp,q-meta,q-agt,q-l3
-
-# Heat Services #
-enable_service h-eng h-api h-api-cfn h-api-cw
 
 # Nova Conf #
 [[post-config|$NOVA_CONF]]
@@ -53,6 +47,7 @@ notification_driver=messagingv2
 [DEFAULT]
 notification_topics = notifications,vitrage_notifications
 notification_driver=messagingv2
+policy_file = /etc/heat/policy.yaml
 
 # Aodh Conf #
 [[post-config|$AODH_CONF]]
@@ -65,8 +60,11 @@ driver = messagingv2
 [DEFAULT]
 debug=false
 verbose=true
+notifiers=mistral,nova,webhook
+
 [datasources]
 types = nova.host,nova.instance,nova.zone,aodh,static,cinder.volume,neutron.network,neutron.port,zabbix,heat.stack,doctor
+
 [zabbix]
 url = http://127.0.0.1/zabbix
 user=Admin
@@ -74,5 +72,6 @@ password=zabbix
 config_file = /etc/vitrage/zabbix_conf.yaml
 update_method=pull
 changes_interval=10
+
 [database]
 connection = mysql+pymysql://root:password@127.0.0.1/vitrage?charset=utf8
